# api-conversations

./: README.md  build.sh  render.yml  setup.sh
api/: admin.py  geminy.py  models.py  populate_properts.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20250507_2114.py  0003_rename_slug_conversation_id_rename_slug_message_id_and_more.py  0004_alter_conversation_id_alter_message_id.py  0005_failedwebhookevent.py  0006_alter_failedwebhookevent_options_leadinformantion.py  0007_alter_leadinformantion_conversation.py  0007_alter_leadinformantion_conversation_and_more.py  0007_leadinfos.py  0008_failedwebhookevent_remove_conversation_slug_and_more.py  0008_remove_leadinformantion_conversation_and_more.py  0009_failedwebhookevent.py  0009_remove_conversation_id_and_more.py  0010_property.py
api/templates/api/: conversation_detail.html  conversation_list.html  dashboard.html  property_detail.html  property_list.html
realmate_challenge/: authentication.py  pyproject.toml  settings.py  urls.py
