[tool.poetry]
name = "realmate-challenge"
version = "0.1.0"
description = ""
authors = ["Marcos-Dantas22 <marcosdantaslkdin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.14"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
