[tool.poetry]
name = "realmate-challenge"
version = "0.1.0"
description = ""
authors = ["Marcos-Dantas22 <marcosdantaslkdin@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gunicorn = "gunicorn.app.wsgiapp:run"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
djangorestframework = "^3.14"
python-decouple = "^3.8"
sentry-sdk = {extras = ["django"], version = "^2.27.0"}
drf-spectacular = "^0.28.0"
google-generativeai = "^0.8.5"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"  # ou asyncpg se for async
django-cors-headers = "^4.7.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
